--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# Specify the instrumentation key of your Application Insights resource.
+azure.application-insights.instrumentation-key=6e2c8569-ffbf-4f5c-842e-168f3562481b
+# Specify the name of your springboot application. This can be any logical name you would like to give to your app.
+spring.application.name=AppInsights
